# palindrome-string

./: CMakeLists.txt  README.md
include/: PalindromeChecker.hpp
source/: PalindromeChecker.cpp  main.cpp
test/: test_PalindromeChecker.cpp
